# exrate

./: LICENSE  README.md  exrate.py  install.sh  pyproject.toml
.github/workflows/: publish.yml
